--- a/package.xml
+++ b/package.xml
@@ -30,6 +30,7 @@
   <build_depend>mean_shift_clustering</build_depend>
   <build_depend>gazebo</build_depend>
   <build_depend>gazebo_ros</build_depend>
+  <build_depend>mrs_msgs</build_depend>
 
   <run_depend>geometry_msgs</run_depend>
   <run_depend>geographic_msgs</run_depend>
@@ -50,6 +51,7 @@
   <run_depend>mean_shift_clustering</run_depend>
   <run_depend>gazebo</run_depend>
   <run_depend>gazebo_ros</run_depend>
+  <run_depend>mrs_msgs</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
