--- a/config/kopterworx_exploration_sim_house.yaml
+++ b/config/kopterworx_exploration_sim_house.yaml
@@ -1,7 +1,7 @@
 exploration:
   # simulation
-  global_frame: "/red/map/map"
-  base_link_frame: "/red/map/base_link"
+  global_frame: "uav1/fcu"
+  base_link_frame: "uav1/fcu"
   # Exploration depth of octomap tree. 16 is best resolution, slowest exploration
   # Save frontiers on that level
   # experience shows that there is significant increase in search time by 
@@ -33,10 +33,9 @@ exploration:
 sensor_model:
   # Field of view in degrees
   horizontalFOV: 360
-  verticalFOV: 30
+  verticalFOV: 180
   # VelodyneVLP16 max range in meters
-  max_range: 10
-  pitch_angle: 10.0
+  max_range: 20
 
   probability_hit: 0.7
   probability_miss: 0.4
@@ -44,7 +43,7 @@ sensor_model:
   clamping_thres_max: 0.97
 
 octomap:
-  resolution: 0.5
+  resolution: 0.4
   octree_depth: 16
   # Filename and file path for saving octomap
   filename: "octomap_house.binvox.bt"
